<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".KeyboardActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="1">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="left"
android:weightSum="1"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#323232"
        android:gravity="center"
        android:onClick="moveLeft"
        android:layout_weight="0.5"
        android:text="@string/left"
        android:textColor="#E0E0E0"
        tools:ignore="HardcodedText,NestedWeights,RtlHardcoded" />
</LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#545454"
                        android:text="@string/up"
                        android:textColor="#E0E0E0" />

                </FrameLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/left"
                        android:textColor="#E0E0E0" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/down"
                        android:textColor="#E0E0E0" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/right"
                        android:textColor="#E0E0E0" />
                </LinearLayout>

            </LinearLayout>
            <Space
                android:layout_height="match_parent"
                android:layout_width="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ctrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#545454"
                        android:text="@string/ctrl"
                        android:textColor="#E0E0E0" />
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/alt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/alt"
                        android:textColor="#E0E0E0" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/tab"
                        android:textColor="#E0E0E0" />


                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/del"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#545454"
                        android:text="@string/del"
                        android:textColor="#E0E0E0" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:weightSum="1"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:background="#323232"
                android:gravity="center"
                android:layout_weight="0.5"
                android:onClick="moveRight"
                android:text="@string/right"
                android:textColor="#E0E0E0"
                tools:ignore="HardcodedText,NestedWeights,RtlHardcoded" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>